better pulling code

--- a/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
+++ b/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
@@ -21,7 +21,7 @@ library(writexl)
 ## STATIONS/TSS - *FROM WATER CHEMISTRY BENCHMARKS SCRIPT*
 
 ```{r}
-tss <- read_excel("TSS_10292025.xlsx") #output file from ref benchmarks script
+tss <- read_excel("tss2025-10-30.xlsx") #output file from ref benchmarks script
 
 comids <- tss %>% select(COMID) #get just the COMIDs for next step
 
@@ -38,7 +38,7 @@ comids <- tss %>% select(COMID) #get just the COMIDs for next step
 
 ```{r}
 #partable <- StreamCatTools::sc_get_metric_names() #supposedly best source for query-able metric names
-#scpar <- StreamCatTools::sc_get_params(param = 'metric_names') #name mismatch error message suggests consulting this list
+scpar <- StreamCatTools::sc_get_params(param = 'metric_names') #name mismatch error message suggests consulting this list
 #write_xlsx(partable, path = "C:/Users/athomps/OneDrive - Oregon/Desktop/partable.xlsx") #saved as intermediate file, which moved to Teams and got cleaned up
 
 kitty <- read_excel("C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - General/Env't Stats Class Project 2025/StreamCat/StreamCatMetrics_new.xlsx") #final metrics table
@@ -51,25 +51,23 @@ kitty <- read_excel("C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - Gener
 
 ```{r}
 # FOR TESTING INDIVIDUAL METRICS/COMIDS (e.g., to ensure names match)
-#test <- StreamCatTools::sc_get_data(comid = '23648454', metric = 'wwtpminordens', showAreaSqKm = TRUE, aoi='ws, cat')
+test <- StreamCatTools::sc_get_data(comid = '23910659', metric = 'precipminusevt', showAreaSqKm = FALSE, aoi='watershed')
 
 
 # full data pulls use aoi='catchment,watershed,other')) 
-# generating Spearman ranks use aoi='watershed')) 
+# generating Spearman ranks use aoi='watershed')) Run separate line for aoi = Other since they don't pull unless on their own
 
 
 # FUNCTION - START +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 get_streamcat <- function(comids, type = c("Agriculture","Climate","Dams","Flow","IWI","Land Cover","Lithology","Mining_Toxics","Roads",
-                                           "Urban","Wildfire")){
+                                           "Urban","Wildfire","Others")){
 type <- match.arg(type)
 #comids_split <- split(comids, ceiling(seq_along(comids)/750)) #removed b/c doesn't seem to be doing anything - wrong data class??
 
 if(type == "Agriculture"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'canaldens,pctagdrainage,pctagslphigh2001,pctagslpmid2001,pestic1997,
-                                                                           sw_flux,waterinput,wdrw_LD,pctcrop2001,pcthay2001,cbnf,fert,manure,nani,nsurp,
-                                                                           agkffact', 
+                                                                           metric = 'canaldens,pctagdrainage,pctagslphigh2001,pctagslpmid2001,pestic1997,sw_flux,waterinput,wdrw_LD,pctcrop2001,pcthay2001,cbnf,fert,manure,nani,nsurp,agkffact',
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed')) 
   }
@@ -77,9 +75,7 @@ if(type == "Agriculture"){
 if(type == "Climate"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'precip2008,precip8110,precip9120,tmax8110,tmax9120,tmean2008,tmean8110,
-                                                                           tmean9120,tmin8110,tmin9120,inorgnwetdep2008,nh42008,no32008,sn2008,mast2008,
-                                                                           msst2008,mwst2008,precipminusevt,wetindex', 
+                                                                           metric = 'precip2008,precip8110,precip9120,tmax8110,tmax9120,tmean2008,tmean8110,tmean9120,tmin8110,tmin9120,inorgnwetdep2008,nh42008,no32008,sn2008,precipminusevt,wetindex', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
@@ -95,7 +91,7 @@ if(type == "Dams"){
 if(type == "Flow"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'bfi,bankfulldepth,bankfullwidth,elev,runoff,thalwagdepth,wettedwidth', 
+                                                                           metric = 'bfi,elev,runoff', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
@@ -103,7 +99,7 @@ if(type == "Flow"){
 if(type == "IWI"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'chem,conn,habt,hyd,ici,iwi,sed,temp', 
+                                                                           metric = 'chem,conn,habt,hyd,sed,temp', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
@@ -111,9 +107,7 @@ if(type == "IWI"){
 if(type == "Land Cover"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'pctbl2001,pctconif2001,pctdecid2001,pctgrs2001,pcthbwet2001,pctice2001,
-                                                                           pctmxfst2001,pctow2001,pctshrb2001,pcturbhi2001,pcturblo2001,pcturbmd2001,
-                                                                           pcturbop2001,pctwdwet2001,pctfrstloss2002', 
+                                                                           metric = 'pctbl2001,pctconif2001,pctdecid2001,pctgrs2001,pcthbwet2001,pctice2001,pctmxfst2001,pctow2001,pctshrb2001,pcturbhi2001,pcturblo2001,pcturbmd2001,pcturbop2001,pctwdwet2001,pctfrstloss2002', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
@@ -121,11 +115,7 @@ if(type == "Land Cover"){
 if(type == "Lithology"){ 
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'al2o3,cao,compstrgth,fe2o3,hydrlcond,k2o,mgo,n,na2o,p2o5,pctalkintruvol,
-                                                                           pctalluvcoast,pctcarbresid,pctcoastcrs,pctcolluvsed,pcteolcrs,pcteolfine,pctextruvol,
-                                                                           pctglaclakecrs,pctglaclakefine,pctglactilclay,pctglactilcrs,pctglactilloam,pcthydric,
-                                                                           pctnoncarbresid,pctsallake,pctsilicic,pctwater,rockn,s,sio2,clay,kffact,om,perm,
-                                                                           Rckdep,rckdep,sand,wtdep',
+                                                                           metric = 'al2o3,cao,compstrgth,fe2o3,hydrlcond,k2o,mgo,na2o,p2o5,pctalkintruvol,pctalluvcoast,pctcarbresid,pctcoastcrs,pctcolluvsed,pcteolcrs,pcteolfine,pctextruvol,pctglaclakecrs,pctglaclakefine,pctglactilclay,pctglactilcrs,pctglactilloam,pcthydric,pctnoncarbresid,pctsallake,pctsilicic,pctwater,rockn,s,sio2,clay,kffact,om,perm,Rckdep,rckdep,sand,wtdep,n',
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
@@ -149,8 +139,7 @@ if(type == "Roads"){
 if(type == "Urban"){ 
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'huden2010,npdesdens,popden2010,septic,wwtpalldens,wwtpmajordens,
-                                                                           wwtpminordens,pctimp2001,pctimpslphigh2001,pctimpslpmid2001,pctnonagintrodmanagveg', 
+                                                                           metric = 'huden2010,npdesdens,popden2010,septic,wwtpalldens,wwtpmajordens,wwtpminordens,pctimp2001,pctimpslphigh2001,pctimpslpmid2001,pctnonagintrodmanagveg', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
@@ -158,10 +147,17 @@ if(type == "Urban"){
 if(type == "Wildfire"){ 
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'pctfire2002,pctburnarea2002,pcthighsev2002,pctincvegresp2002,pctlowsev2002,
-                                                                           pctmodsev2002,pctnonprocmask2002,pctundsev2002', 
+                                                                           metric = 'pctfire2002,pctburnarea2002,pcthighsev2002,pctincvegresp2002,pctlowsev2002,pctmodsev2002,pctnonprocmask2002,pctundsev2002', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
+  }
+
+if(type == "Others"){
+
+  streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
+                                                                           metric = 'bankfulldepth,bankfullwidth,ici,iwi,mast2008,msst2008,mwst2008,thalwagdepth,wettedwidth', 
+                                                                           showAreaSqKm = FALSE,
+                                                                           aoi='other')) 
   }
 
 names(streamcat) <- base::toupper(names(streamcat))
@@ -185,15 +181,17 @@ mintox <- get_streamcat(comids = comids, type = "Mining_Toxics")
 roads <- get_streamcat(comids = comids, type = "Roads")
 urb <- get_streamcat(comids = comids, type = "Urban")
 fire <- get_streamcat(comids = comids, type = "Wildfire")
+other <- get_streamcat(comids = comids, type = "Others")
 
 # MERGE INTO ONE TABLE
-meow <- list(ag, clim, dams, flow, iwi, cover, litho, mintox, roads, urb, fire)
+meow <- list(ag, clim, dams, flow, iwi, cover, litho, mintox, roads, urb, fire, other)
 meow <- meow %>% reduce(full_join, by='COMID')
 
 # IDENTIFY WHICH COMID(S) DIDN'T YIELD STREAMCAT RESULTS AND INVESTIGATE (FIX IN STATIONS DB BEFORE PROCEEDING)
+kcomids <- meow %>% select(COMID)
 nomatch <- comids[!comids$COMID %in% kcomids$COMID, ] #make data frame showing which COMIDs aren't pulling StreamCat data
-nomatch.c <- subset(tss, tss$COMID == "23764745" | tss$COMID == "24516234" | tss$COMID == "23815386") #change COMIDs as needed
-rm(list = c('nomatch', 'nomatch.c')) #clean up environment
+#nomatch.c <- subset(tss, tss$COMID == "23764745" | tss$COMID == "24516234" | tss$COMID == "23815386") #change COMIDs as needed
+rm(list = c('nomatch', 'nomatch.c', 'kcomids')) #clean up environment
 
 # GROUP PREDICTORS BY HUMAN VS NATURAL
 human <- subset(kitty, kitty$Category == "Anthropogenic" & kitty$`Use?` == 'y')
@@ -206,13 +204,18 @@ natural.mets <- natural[,6] #just the natural metric names
 #### Make Spearman correlation matrix to identify covaried parameters
 
 ```{r, warning=FALSE}
-spear <- cor(meow, method = "spearman")
+spear <- cor(meow, method = "spearman", use = "pairwise.complete.obs")
 spear <- as.data.frame(spear)
 spear.rows <- tibble::rownames_to_column(spear)
 
-spear2 <- spear.rows %>% mutate(new_column = ifelse(rowname > 40, "High Pages", "Low Pages"))
-
 write_xlsx(spear.rows, path = "C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - General/Env't Stats Class Project 2025/StreamCat/Spearmans.xlsx")
+
+
+matrix <- spear.rows %>%  
+  gather(-rowname, key = "colname", value = "cor") %>% 
+  filter(abs(cor) > 0.8)
+
+write_xlsx(matrix, path = "C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - General/Env't Stats Class Project 2025/StreamCat/Spearmans2.xlsx")
 ```
 
 ## EXPLORE CO-VARIED PARAMETERS AND SELECT WHICH WE WANT TO RETAIN FOR MODELLING PURPOSES
@@ -220,7 +223,7 @@ write_xlsx(spear.rows, path = "C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fu
 ## PULL STREAMCAT AGAIN BUT ONLY FOR PARAMETERS OF INTEREST
 
 ```{r}
-
+#++++++++++++++++++++++++placeholder for final metrics function+++++++++++++++++++++++
 ```
 
 # do correlation analysis for streamcat predictors - which covary with each other? Get all predictors for watersheds.
