--- a/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
+++ b/Benchmarks/Water Chemistry/TSS Class Project/TSS Reference Benchmarks_Code.Rmd
@@ -9,12 +9,12 @@ output: html_document
 
 # **1 - LOAD PACKAGES**
 
-<<<<<<< HEAD
 ```{r warning=TRUE}
 library(StreamCatTools) #visit 'https://github.com/USEPA/StreamCatTools' for installation instructions
 library(tidyverse)
 library(readxl)
 library(writexl)
+library(ggplot2)
 ```
 
 # **2 - IMPORT DATA**
@@ -38,25 +38,29 @@ comids <- tss %>% select(COMID) #get just the COMIDs for next step
 #### Make table of StreamCat metadata and clean up in Excel
 
 ```{r}
-#partable <- StreamCatTools::sc_get_metric_names() #supposedly best source for query-able metric names
-scpar <- StreamCatTools::sc_get_params(param = 'metric_names') #name mismatch error message suggests consulting this list
-#write_xlsx(partable, path = "C:/Users/athomps/OneDrive - Oregon/Desktop/partable.xlsx") #saved as intermediate file, which moved to Teams and got cleaned up
+#supposedly best source for query-able metric names
+#partable <- StreamCatTools::sc_get_metric_names()
+
+#name mismatch error message suggests consulting this list
+#scpar <- StreamCatTools::sc_get_params(param = 'metric_names') 
+
+#save intermediate file initially; switch to Teams to clean up, then no need to run these first steps
+#write_xlsx(partable, path = "C:/Users/athomps/OneDrive - Oregon/Desktop/partable.xlsx") 
 
 kitty <- read_excel("C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - General/Env't Stats Class Project 2025/StreamCat/StreamCatMetrics_new.xlsx") #final metrics table
 
 #keepers <- subset(kitty, kitty$`Use?`=='y') #keep only parameters of interest
 #mets <- keepers[,5] #make data frame of keeper metric names capable of querying data
+
+# FOR TESTING INDIVIDUAL METRICS/COMIDS (e.g., to ensure names match)
+#test <- StreamCatTools::sc_get_data(comid = '23910659', metric = 'precipminusevt', showAreaSqKm = FALSE, aoi='watershed')
 ```
 
 #### Run function to query StreamCat data by subcategory
 
 ```{r}
-# FOR TESTING INDIVIDUAL METRICS/COMIDS (e.g., to ensure names match)
-test <- StreamCatTools::sc_get_data(comid = '23910659', metric = 'precipminusevt', showAreaSqKm = FALSE, aoi='watershed')
-
-
 # full data pulls use aoi='catchment,watershed,other')) 
-# generating Spearman ranks use aoi='watershed')) Run separate line for aoi = Other since they don't pull unless on their own
+# generating Spearman ranks use aoi='watershed')). Run separate line for aoi='other' since they don't pull unless on their own
 
 
 # FUNCTION - START +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
@@ -205,18 +209,21 @@ natural.mets <- natural[,6] #just the natural metric names
 #### Make Spearman correlation matrix to identify covaried parameters
 
 ```{r, warning=FALSE}
+# FULL CORRELATION MATRIX - ALL VARIABLES
 spear <- cor(meow, method = "spearman", use = "pairwise.complete.obs")
 spear <- as.data.frame(spear)
 spear.rows <- tibble::rownames_to_column(spear)
 
-write_xlsx(spear.rows, path = "C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - General/Env't Stats Class Project 2025/StreamCat/Spearmans.xlsx")
+#export once, then clean up in Excel
+#write_xlsx(spear.rows, path = "C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - General/Env't Stats Class Project 2025/StreamCat/Spearmans.xlsx")
 
-
+# CONDENSED CORRELATION MATRIX - ONLY VARIABLES >|0.8|
 matrix <- spear.rows %>%  
   gather(-rowname, key = "colname", value = "cor") %>% 
   filter(abs(cor) > 0.8)
 
-write_xlsx(matrix, path = "C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - General/Env't Stats Class Project 2025/StreamCat/Spearmans2_rerun.xlsx")
+#export once, then clean up in Excel
+#write_xlsx(matrix, path = "C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! - General/Env't Stats Class Project 2025/StreamCat/Spearmans2_rerun.xlsx")
 ```
 
 ## EXPLORE CO-VARIED PARAMETERS AND SELECT WHICH WE WANT TO RETAIN FOR MODELLING PURPOSES
@@ -226,7 +233,7 @@ write_xlsx(matrix, path = "C:/Users/athomps/Oregon/DEQ - Biomonitoring is Fun! -
 ```{r}
 # FUNCTION - START +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 get_streamcat <- function(comids, type = c("Agriculture2","Climate2","Dams2","Flow2","IWI2","Land Cover2","Lithology2","Mining_Toxics2","Roads2",
-                                           "Urban","Wildfire","Others")){
+                                           "Urban2","Wildfire2","Others2")){
 type <- match.arg(type)
 #comids_split <- split(comids, ceiling(seq_along(comids)/750)) #removed b/c doesn't seem to be doing anything - wrong data class??
 
@@ -238,10 +245,10 @@ if(type == "Agriculture2"){
                                                                            aoi='watershed')) 
   }
 
-if(type == "Climate2"){ #### NEEDS WORK
+if(type == "Climate2"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'precip2008,precip8110,precip9120,tmax8110,tmax9120,tmean2008,tmean8110,tmean9120,tmin8110,tmin9120,inorgnwetdep2008,nh42008,no32008,sn2008,precipminusevt,wetindex', 
+                                                                           metric = 'precip9120,wetindex', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
@@ -270,23 +277,23 @@ if(type == "IWI2"){
                                                                            aoi='watershed'))
   }
 
-if(type == "Land Cover2"){ #### NEEDS WORK
+if(type == "Land Cover2"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'pctbl2001,pctconif2001,pctdecid2001,pctgrs2001,pcthbwet2001,pctice2001,pctmxfst2001,pctow2001,pctshrb2001,pcturbhi2001,pcturbmd2001,pcturbop2001,pctwdwet2001,pctfrstloss2002', 
+                                                                           metric = 'pctbl2001,pctconif2001,pctgrs2001,pcthbwet2001,pctice2001,pctmxfst2001,pctow2001,pctshrb2001,pcturbhi2001,pcturbmd2001,pcturbop2001,pctwdwet2001,pctfrstloss2002', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
 
-if(type == "Lithology2"){ #### NEEDS WORK
+if(type == "Lithology2"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'al2o3,cao,compstrgth,fe2o3,hydrlcond,k2o,mgo,na2o,p2o5,pctalkintruvol,pctalluvcoast,pctcarbresid,pctcoastcrs,pctcolluvsed,pcteolcrs,pcteolfine,pctextruvol,pctglaclakecrs,pctglaclakefine,pctglactilclay,pctglactilcrs,pctglactilloam,pcthydric,pctnoncarbresid,pctsallake,pctsilicic,pctwater,rockn,s,sio2,clay,kffact,om,perm,Rckdep,rckdep,sand,wtdep,n',
+                                                                           metric = 'compstrgth,fe2o3,hydrlcond,na2o,pctalkintruvol,pctalluvcoast,pctcarbresid,pctcoastcrs,pctcolluvsed,pcteolcrs,pcteolfine,pctextruvol,pctglaclakecrs,pctglaclakefine,pctglactilclay,pctglactilcrs,pctglactilloam,pcthydric,pctnoncarbresid,pctsallake,pctsilicic,pctwater,rockn,s,clay,kffact,om,Rckdep,rckdep,sand,wtdep,n',
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
 
-if(type == "Mining_Toxics2"){ #### NEEDS WORK - DON'T THINK ANY ARE CORRELATED
+if(type == "Mining_Toxics2"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
                                                                            metric = 'coalminedens,minedens,superfunddens,tridens', 
@@ -294,7 +301,7 @@ if(type == "Mining_Toxics2"){ #### NEEDS WORK - DON'T THINK ANY ARE CORRELATED
                                                                            aoi='watershed'))
   }
 
-if(type == "Roads2"){ #### NEEDS WORK - KEPT DENSITY - IS THIS NOT CORRELATED WITH OTHERS?
+if(type == "Roads2"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
                                                                            metric = 'rdcrs,rdcrsslpwtd,rddens', 
@@ -302,15 +309,15 @@ if(type == "Roads2"){ #### NEEDS WORK - KEPT DENSITY - IS THIS NOT CORRELATED WI
                                                                            aoi='watershed'))
   }
 
-if(type == "Urban2"){ #### NEEDS WORK
+if(type == "Urban2"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
-                                                                           metric = 'huden2010,npdesdens,popden2010,septic,wwtpalldens,wwtpmajordens,wwtpminordens,pctimp2001,pctimpslphigh2001,pctimpslpmid2001,pctnonagintrodmanagveg', 
+                                                                           metric = 'npdesdens,popden2010,septic,wwtpalldens,wwtpmajordens,pctimp2001,pctnonagintrodmanagveg', 
                                                                            showAreaSqKm = FALSE,
                                                                            aoi='watershed'))
   }
 
-if(type == "Wildfire2"){ #### PRETTY SURE OK BUT DOUBLE CHECK
+if(type == "Wildfire2"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
                                                                            metric = 'pctfire2002,pctincvegresp2002,pctnonprocmask2002', 
@@ -318,7 +325,7 @@ if(type == "Wildfire2"){ #### PRETTY SURE OK BUT DOUBLE CHECK
                                                                            aoi='watershed'))
   }
 
-if(type == "Others2"){ #### PRETTY SURE OK BUT DOUBLE CHECK
+if(type == "Others2"){
 
   streamcat <- purrr::map_dfr(comids, ~StreamCatTools::sc_get_data(.,
                                                                            metric = 'bankfullwidth,iwi,msst2008',
@@ -351,10 +358,27 @@ other2 <- get_streamcat(comids = comids, type = "Others2")
 
 # MERGE INTO ONE TABLE
 meow2 <- list(ag2, clim2, dams2, flow2, iwi2, cover2, litho2, mintox2, roads2, urb2, fire2, other2)
-meow2 <- meow %>% reduce(full_join, by='COMID')
+meow2 <- meow2 %>% reduce(full_join, by='COMID')
+
+# FINAL CHECK FOR CORRELATED VARIABLES
+spear2 <- cor(meow2, method = "spearman", use = "pairwise.complete.obs")
+spear2 <- as.data.frame(spear2)
+spear.rows2 <- tibble::rownames_to_column(spear2)
+
+matrix2 <- spear.rows2 %>%  
+  gather(-rowname, key = "colname", value = "cor") %>% 
+  filter(abs(cor) > 0.8)
+
+# REMOVE METRICS FOR UNWANTED REPRESENTATIVE COMIDS FOR SITES ON HIGH RES NHD LAYER
+scmets <- subset(meow2, meow2$COMID != '23774647' & meow2$COMID != '23877125' & meow2$COMID != '23810652')
+```
+
+# **3 - BUILD MODEL**
+
+## Random forests...
+
+```{r}
+
 ```
 
 
-
-
-# need to query catchment data when we "Used closest COMID" ???
